<resources>

    <!-- "App Name"  -->

    <string name="app_name">Guides</string>

    <!-- "Add a guider" Interface -->

    <string name="UploadPhotoTxt">Upload a photo  :</string>
    <string name="NameTxt">Name  :</string>
    <string name="AddBtn">ADD DETAILS</string>
    <string name="ContactTxt">Contact number</string>

    <!-- "Edit guide's details" Interface -->

    <string name="ProfilePicTxt">Your profile picture  :</string>
    <string name="TypeUpdateTxt">Type :  </string>
    <string name="NameUpdateTxt">Name  : </string>
    <string name="ContatNumUpdateTxt" translatable="false">Contact Number : </string>
    <string name="AgeUpdate">Age : </string>
    <string name="ExperianceUpdate">Experience : </string>
    <string name="AmountUpdate">Amount per-day : </string>
    <string name="UpdateBtn">UPDATE DETAILS</string>

    <!-- "Delete guide's details" Interface -->

    <string name="DeleteProfilePicTxt">Your proflie picture :</string>
    <string name="DeleteTypeTxt">Type : </string>
    <string name="DeleteNameTxt">Name : </string>
    <string name="DeleteContactNumberTxt">Contact Number  : </string>
    <string name="DeleteAge">Age : 56</string>
    <string name="DeleteExperience">Experience  :</string>
    <string name="DeleteAmount">Amount per-day :</string>
    <string name="DeleteBtn">DELETE DETAILS</string>

    <!-- "Delete guide's with vehicles " Interface -->
    <!-- "Guide 1: -->

    <string name="ViewType1">Type : Guide with vehicle</string>
    <string name="ViewName1">Name : Mr .  Bandara</string>
    <string name="ViewContactNumber1">Contact Number</string>
    <string name="ViewAge1">Age : 34</string>
    <string name="ViewExperience1">Experience : 4 years driving experience and 2 years guide experience</string>
    <string name="VeiwAmount1">Amount per-day : 3000.00</string>

    <!-- "Guide 2: -->
    <string name="ViewType2">Type : Guide with vehicle</string>
    <string name="ViewName2">Name : Mr.Thilakarathne</string>
    <string name="ViewContact2">Contact Number :</string>
    <string name="ViewAge">Age : 54</string>
    <string name="ViewExperience2">Experiance : </string>
    <string name="VeiwAmomunt2">Amount : Rs. 34000.00</string>

    <!-- "guide without vehicle" Interface -->
    <!-- "Guide 1 and Guide 2: -->


    <string name="ViewTyp3">Type : Guide without vehicle</string>
    <string name="ViewType4">Type: Guide without vehicle</string>
    <string name="ViewName3">Name: Mr.Bandara</string>
    <string name="ViewContactNumber3">Contact Number :</string>
    <string name="Veiwcontact4">contact4 :</string>
    <string name="ViewAge3">Age : 76</string>
    <string name="ViewAge4">Age : 65</string>
    <string name="ViewExperience3">Experience : </string>
    <string name="ViewExperience4">Experience : </string>
    <string name="VeiwAmount3">Amount : Rs . 5000.00</string>
    <string name="ViewAmount4">Amount : Rs. 4000.00</string>
    <string name="ViewName4">Name Mr.Rathnayake</string>
    <string name="ViewContact4">Contact Number : 0812359019</string>

    <!-- "Admin's home page" Interface -->

    <string name="AdminBtn1">View all guides details</string>
    <string name="AdminBtn2">Edit / Delete Guides details</string>
    <string name="AdminBtn3">Add New Details</string>

    <!-- "Customer's home page" Interface -->

    <string name="CustomerHomeBtn1">Guide with vehical</string>
    <string name="customerBtn2">Guide without vehicle</string>

    <!-- "Edit/Delete guide details" Interface -->
    <!-- Edit buttons -->

    <string name="editBtn1">EDIT</string>
    <string name="editBtn2">EDIT</string>
    <string name="editBtn3">EDIT</string>
    <string name="editBtn4">EDIT</string>
    <string name="editBtn5">EDIT</string>
    <string name="EditTableButton">EDIT</string>
    <!-- Delete Buttons-->

    <string name="deleteBtn1">DELETE</string>
    <string name="deleteBtn2">DELETE</string>
    <string name="deleteBtn3">DELETE</string>
    <string name="deleyeBtn4">DELETE</string>
    <string name="deleteBtn5">DELETE</string>
    <string name="DeleteTableBtn">DELETE</string>
    <string name="deletebtn4">DELETE</string>


</resources>