<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuideWitoutVehicleVeiw">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewContact4"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="482dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewAge4"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="501dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewAmount4"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="556dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewExperience4"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="520dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewType4"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="429dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="152dp"
        android:layout_height="110dp"
        android:background="@android:color/holo_orange_dark"
        app:srcCompat="@drawable/man3"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="149dp"
        android:layout_height="118dp"
        android:background="@android:color/holo_orange_dark"
        app:srcCompat="@drawable/man4"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="303dp"
        tools:srcCompat="@drawable/man4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewName3"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="144dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewContactNumber3"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="163dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="35dp"
        android:layout_height="20dp"
        android:text="@string/ViewAge3"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="182dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="344dp"
        android:layout_height="45dp"
        android:text="@string/ViewExperience3"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="202dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VeiwAmount3"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="247dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewTyp3"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="125dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewName4"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="455dp" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="416dp"
        android:layout_height="74dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="656dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="66dp"
        android:layout_height="73dp"
        app:srcCompat="@drawable/guides"
        tools:layout_editor_absoluteX="339dp"
        tools:layout_editor_absoluteY="657dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="69dp"
        android:layout_height="71dp"
        app:srcCompat="@drawable/home"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="659dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="86dp"
        android:layout_height="72dp"
        app:srcCompat="@drawable/hotel"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="659dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="94dp"
        android:layout_height="76dp"
        app:srcCompat="@drawable/shops"
        tools:layout_editor_absoluteX="245dp"
        tools:layout_editor_absoluteY="655dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="84dp"
        android:layout_height="72dp"
        app:srcCompat="@drawable/places"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="659dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="49dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/guides"
        tools:layout_editor_absoluteX="316dp"
        tools:layout_editor_absoluteY="601dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="55dp"
        android:layout_height="62dp"
        app:srcCompat="@drawable/home"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="587dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="84dp"
        android:layout_height="65dp"
        app:srcCompat="@drawable/hotel"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="586dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="61dp"
        android:layout_height="45dp"
        app:srcCompat="@drawable/shops"
        tools:layout_editor_absoluteX="227dp"
        tools:layout_editor_absoluteY="598dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="77dp"
        android:layout_height="69dp"
        app:srcCompat="@drawable/places"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="592dp" />

</android.support.constraint.ConstraintLayout>